feat(stargate-next): complete account management
